# DreadBeat

./: .gitignore  README.md  \  pyproject.toml
src/: main.py
src/ble/: mock.py  scanner.py
src/ui/: ekg.py  overlay.py
